--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="commentary">대상 자녀별 지원금 범위 상세 확인<span id="icon1" class="icon">∨</span></p>
                 </div>
                 </div>
-            <div id="toggle1" class="toggle hidden">
+            <div id="toggle1" class="toggle">
             <div id="table1" class="table">
                 <table border="1">
                     <th class ="thStart">돌봄 아동수</th>
@@ -37,7 +37,7 @@
                     <th>영아 2명</th>
                     <th class="thEnd">영아 3명</th>
                     <tr>
-                        <td class="bold top">지원조건<div class="br"><span id="tableCommentary1" class="tableCommentary">(월 최소 이용시간)</span></div></td>
+                        <td class="bold top">지원조건<div class="br"><span id="tableCommentary1" class="tableCommentary lineHeight">(월 최소 이용시간)</span></div></td>
                         <td class="top end" colspan="3">월 20~40시간 이상 이용시</td>
                     </tr>
                     <tr>
