--- a/result.html
+++ b/result.html
@@ -247,6 +247,12 @@
     toggleTitle2.addEventListener('click', function(){toggleElement("toggle2", "icon2")})
     toggleTitle3.addEventListener('click', function(){toggleElement("toggle3", "icon3")})
 
+    const kakaoButton = document.getElementById("kakao")
+
+    kakaoButton.addEventListener('click', function (){
+        window.open('http://pf.kakao.com/_yUWqG/chat', '_blank');
+    })
+
 </script>
 </body>
 </html>
