반응형 적용

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <option value="2">2명</option>
                     <option value="3">3명</option>
                 </select>
-                <p class="commentary">서울시 아이돌봄 서비스는 이용월 기준 만 24개월 ~ 만 36개월의 자녀만 지원 가능합니다.</p>
+                <div class="commentary">서울시 아이돌봄 서비스는 이용월 기준 만 24개월 ~ 만 36개월의 자녀만 지원 가능합니다.</div>
             <div id="toggleTitleBox1" class="toggleTitleBox">
             <div id="toggleBox1" class="toggleBox">
             <div id="toggleTitle1" class="toggleTitle">
-            <p class="commentary">대상 자녀별 지원금 범위 상세 확인<span id="icon1" class="icon">∨</span></p>
+            <div class="commentary">대상 자녀별 지원금 범위 상세 확인<span id="icon1" class="icon">∨</span></div>
                 </div>
                 </div>
             <div id="toggle1" class="toggle hidden">
