--- a/result.html
+++ b/result.html
@@ -50,29 +50,30 @@
                         <tr>
                             <td class="tdStart tdBottom">상세</td>
                             <td class="tdEnd tdBottom">
-                                <div class="proDetailBox">
-                                    <div class="proDetailLineBox">
-                                <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDescription eight oneLine">시터 급여</div>
-                                    </div>
-                                    <div class="proDetailLineBox">
-                                <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDescription eight oneLine">무제한 시터 무료 탐색</div>
-                                        </div>
-                                    <div class="proDetailLineBox">
-                                <div class="proPlusBox two twoLinePlus"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDetailPreBox eight"><div class="proDetailPre">pro 전담 매니저가</div><div class="proDescription">시터 직접 매칭 지원
-                                <span class="proDetailComment">(평균 7일 내 매칭완료)</span></div></div>
-                                        </div>
-                                    <div class="proDetailLineBox">
-                                    <div class="proPlusBox two twoLinePlus"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDetailPreBox eight"><div class="proDetailPre">복잡한 지원금 정산, 놓치지 않도록
-                                    </div><div class="proDescription">매월 정산 지원</div></div>
-                                        </div>
-                                    <div class="proDetailLineBox">
-                                    <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDetailPreBox eight"><div class="proDescription subCommentary">모든 돌봄 활동 100% 보험 가입<br>
-                                        <span class="proDetailComment">(시터 과실로 인한 대인/대물 사고 보장)</span></div></div>
-                                        </div>
-                                    <div class="proDetailLineBox">
-                                    <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDescription eight oneLine">실시간 전화<span class="spot">●</span>카카오톡 고객상담</div>
-                                        </div>
-                                </div>
+                                <img src="proDetail.png" class="detailImg" alt="상세 설명">
+<!--                                <div class="proDetailBox">-->
+<!--                                    <div class="proDetailLineBox">-->
+<!--                                <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDescription eight oneLine">시터 급여</div>-->
+<!--                                    </div>-->
+<!--                                    <div class="proDetailLineBox">-->
+<!--                                <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDescription eight oneLine">무제한 시터 무료 탐색</div>-->
+<!--                                        </div>-->
+<!--                                    <div class="proDetailLineBox">-->
+<!--                                <div class="proPlusBox two twoLinePlus"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDetailPreBox eight"><div class="proDetailPre">pro 전담 매니저가</div><div class="proDescription">시터 직접 매칭 지원-->
+<!--                                <span class="proDetailComment">(평균 7일 내 매칭완료)</span></div></div>-->
+<!--                                        </div>-->
+<!--                                    <div class="proDetailLineBox">-->
+<!--                                    <div class="proPlusBox two twoLinePlus"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDetailPreBox eight"><div class="proDetailPre">복잡한 지원금 정산, 놓치지 않도록-->
+<!--                                    </div><div class="proDescription">매월 정산 지원</div></div>-->
+<!--                                        </div>-->
+<!--                                    <div class="proDetailLineBox">-->
+<!--                                    <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDetailPreBox eight"><div class="proDescription subCommentary">모든 돌봄 활동 100% 보험 가입<br>-->
+<!--                                        <span class="proDetailComment">(시터 과실로 인한 대인/대물 사고 보장)</span></div></div>-->
+<!--                                        </div>-->
+<!--                                    <div class="proDetailLineBox">-->
+<!--                                    <div class="proPlusBox two"><img src="Frame%20427318375.png" alt="십자아이콘"></div><div class="proDescription eight oneLine">실시간 전화<span class="spot">●</span>카카오톡 고객상담</div>-->
+<!--                                        </div>-->
+<!--                                </div>-->
                             </td>
                         </tr>
                     </table>
