--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="init.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/init.css">
+        <link rel="stylesheet" href="css/style.css">
         <style>
         </style>
         <title>월 이용요금 계산기</title>
