--- a/result.html
+++ b/result.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="init.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/init.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
     </style>
     <title>월 예상 이용요금 계산 결과</title>
@@ -74,7 +74,7 @@
                         <tr>
                             <td class="tdStart tdBottom">상세</td>
                             <td class="tdEnd tdBottom">
-                                <img src="proDetail.png" class="detailImg" alt="상세 설명">
+                                <img src="img/proDetail.png" class="detailImg" alt="상세 설명">
                             </td>
                         </tr>
                     </table>
