계산 단위 추가

--- a/result.html
+++ b/result.html
@@ -193,25 +193,25 @@
     document.getElementById("proResult1").textContent = proResult.toLocaleString();
     document.getElementById("normalResult1").textContent = normalResult.toLocaleString();
 
-    document.getElementById("costPerHour1").textContent = costPerHour.toLocaleString();
-    document.getElementById("wagePerHour1").textContent = wagePerHour.toLocaleString();
-    document.getElementById("charge1").textContent = charge.toLocaleString();
+    document.getElementById("costPerHour1").textContent = costPerHour.toLocaleString() +"원";
+    document.getElementById("wagePerHour1").textContent = wagePerHour.toLocaleString() +"원";
+    document.getElementById("charge1").textContent = charge.toLocaleString() +"원";
 
-    document.getElementById("regularPrice1").textContent = regularPrice.toLocaleString();
-    document.getElementById("costPerHour2").textContent = costPerHour.toLocaleString();
-    document.getElementById("hour1").textContent = hour.toLocaleString();
+    document.getElementById("regularPrice1").textContent = regularPrice.toLocaleString() +"원";
+    document.getElementById("costPerHour2").textContent = costPerHour.toLocaleString() +"원";
+    document.getElementById("hour1").textContent = hour.toLocaleString() +"시간";
 
-    document.getElementById("subsidy1").textContent = subsidy.toLocaleString();
-    document.getElementById("subsidyPerHour1").textContent = subsidyPerHour.toLocaleString();
-    document.getElementById("hour2").textContent = hour.toLocaleString();
+    document.getElementById("subsidy1").textContent = subsidy.toLocaleString() +"원";
+    document.getElementById("subsidyPerHour1").textContent = subsidyPerHour.toLocaleString() +"원";
+    document.getElementById("hour2").textContent = hour.toLocaleString() +"시간";
 
-    document.getElementById("proResult2").textContent = proResult.toLocaleString();
-    document.getElementById("regularPrice2").textContent = regularPrice.toLocaleString();
-    document.getElementById("subsidy2").textContent = subsidy.toLocaleString();
+    document.getElementById("proResult2").textContent = proResult.toLocaleString() +"원";
+    document.getElementById("regularPrice2").textContent = regularPrice.toLocaleString() +"원";
+    document.getElementById("subsidy2").textContent = subsidy.toLocaleString() +"원";
 
-    document.getElementById("normalResult2").textContent = normalResult.toLocaleString();
-    document.getElementById("wagePerHour2").textContent = wagePerHour.toLocaleString();
-    document.getElementById("hour3").textContent = hour.toLocaleString();
+    document.getElementById("normalResult2").textContent = normalResult.toLocaleString() +"원";
+    document.getElementById("wagePerHour2").textContent = wagePerHour.toLocaleString() +"원";
+    document.getElementById("hour3").textContent = hour.toLocaleString() +"시간";
 
 
     function toggleElement(toggle1, icon1) {
