결과 페이지 링크 접속시 입력 페이지로 강제 이동 추가

--- a/result.html
+++ b/result.html
@@ -162,6 +162,16 @@
     <button id="kakao" class="kakao">카카오톡 문의하기</button>
 </div>
 <script>
+    window.onload = function() {
+        let referer = document.referrer;
+
+        if (referer.includes("index.html")) {
+
+        } else {
+            location.href = "index.html";
+        }
+    };
+
     var children = parseInt(sessionStorage.getItem('children'));
     var wagePerHour = parseInt(sessionStorage.getItem('wagePerHour'));
     var hour = parseInt(sessionStorage.getItem('hour'));
