1차 수정사항 최종 반영

--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
                         2. 돌봄비 지원 조건:
                     </div>
                     <div class="toggleCommentary">
-                        &nbsp;&nbsp;&nbsp;&nbsp;<span class="spot">●</span> &nbsp;월
+                        &nbsp;&nbsp;&nbsp;&nbsp;<span class="spot">ㆍ</span> &nbsp;월
                         20시간 이상 돌봄서비스 이용시, 지원금 수령 가능
                     </div>
                     <div class="toggleCommentary">
-                        &nbsp;&nbsp;&nbsp;&nbsp;<span class="spot">●</span> &nbsp;월
+                        &nbsp;&nbsp;&nbsp;&nbsp;<span class="spot">ㆍ</span> &nbsp;월
                         최대 40시간까지 시간당 지원금 적용
                     </div>
                     <div class="toggleCommentary marginTop4px">
                         3. 연간 지원금 총액:
                     </div>
                     <div class="toggleCommentary">
-                        &nbsp;&nbsp;&nbsp;&nbsp;<span class="spot">●</span> &nbsp;월
+                        &nbsp;&nbsp;&nbsp;&nbsp;<span class="spot">ㆍ</span> &nbsp;월
                         40시간, 12개월 이용 시 지원금 총액 360만원 (자녀 1명 기준)
                     </div>
                 </div>
