2차 수정사항 반영

--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
         sessionStorage.setItem("wagePerHour", wagePerHour);
         sessionStorage.setItem("hour", hour);
         sessionStorage.setItem("subsidy", subsidy);
+        sessionStorage.setItem("currentPage", "Yes");
 
         window.location.href = "result.html";
     });
