240318 수정사항 반영

--- a/result.html
+++ b/result.html
@@ -38,7 +38,7 @@
             </div>
             <div id="toggle2" class="toggle hidden">
                 <div class="calculateNumberingContainer">
-                    <div class="calculateNumber red">실 결제 금액</div>
+                    <div class="calculateNumber">Pro 서비스 월 결제 금액</div>
                     <div class="calculateContainer">
                         <div id="proResult2" class="calculateElement red odd"></div>
                         <div class="even">=</div>
@@ -48,15 +48,15 @@
                     </div>
                 </div>
                 <div class="elementCommentBox">
-                    <div class="elementComment transparent odd"></div>
+                    <div class="elementComment odd">실 결제 금액</div>
                     <div class="transparent even"></div>
                     <div class="elementComment left3 odd">A) Pro 서비스 정가</div>
                     <div class="transparent even"></div>
-                    <div class="elementComment odd">서울시 지원금</div>
+                    <div class="elementComment odd">B) 서울시 지원금</div>
                 </div>
 
                 <div class="calculateNumberingContainer">
-                    <div class="calculateNumber">A) 프로 서비스 정가</div>
+                    <div class="calculateNumber">A) Pro 서비스 정가</div>
                     <div class="calculateContainer">
                         <div id="regularPrice1" class="calculateElement odd"></div>
                         <div class="even">=</div>
@@ -109,7 +109,7 @@
                             <td class="tdStart tdTop">요약</td>
                             <td class="tdEnd tdTop">
                                 <div class="summary1">
-                                    <span class="bigPro">맘시터 Pro</span> 전담 매니저가 시터
+                                    <span class="bigPro">맘시터 Pro</span>는 전담 매니저가 시터
                                     매칭부터 지원금 정산까지 AtoZ를 관리합니다.
                                 </div>
                             </td>
@@ -118,14 +118,14 @@
                             <td class="tdStart tdBottom">상세</td>
                             <td class="tdEnd tdBottom">
                                 <div class="proDetailBox">
-                                <div class="detail1">1. 시터 탐색권 무료 제공</div>
+                                <div class="detail1">1. 시터 검증</div>
+                                <div class="detailComment">- 맘시터 Pro 돌봄에서는 신분 인증과 돌봄 자격증 혹은 교육인증을 받은 검증된 시터님을 만날 수 있어요.</div>
+                                <div class="detail1">2. 시터 탐색권 무료 제공</div>
                                 <div class="detailComment">- 유료 탐색권 구매 없이 Pro 시터를 무제한으로 직접 탐색할 수 있어요.</div>
-                                <div class="detail1">2. Pro 전담 매니저의 시터 탐색 지원</div>
-                                <div class="detailComment">- 직접 탐색이 어려운 경우 Pro 매니저가 적합한 시터를 직접 추천드려요. (평균 2주 이내 매칭 완료)</div>
                                 <div class="detail1">3. 모든 돌봄 활동 100% 보험 무료 가입</div>
                                 <div class="detailComment">- 시터의 과실로 인한 대인/대물사고를 보장해요.</div>
                                 <div class="detail1">4. 실시간 전화/카카오톡 상담채널 운영</div>
-                                <div class="detailComment">- 카카오톡 채널 : <a href="https://pf.kakao.com/_yUWqG/chat">바로가기</a></div>
+                                <div class="detailComment">- 카카오톡 채널 : <a href="https://pf.kakao.com/_AxbLrG/chat">바로가기</a></div>
                                 <div class="detailComment">- 상담 번호 : 02-2135-1384</div>
                                 <div class="detailComment">- 상담 시간 : 10시-17시</div>
                                 </div>
@@ -362,7 +362,7 @@
     const kakaoButton = document.getElementById("kakao");
 
     kakaoButton.addEventListener("click", function () {
-        window.open("http://pf.kakao.com/_yUWqG/chat", "_blank");
+        window.open("https://pf.kakao.com/_AxbLrG/chat", "_blank");
     });
 </script>
 </body>
